code runner done

--- a/Clash_RC_2/todo
+++ b/Clash_RC_2/todo
@@ -1,8 +1,14 @@
 // 05-03-2023
-+ Add indication
++ Add indication (red,green)
 + Individual last subn
 + Subn page
-+ Requirement.txt
+- Requirement.txt
++ Timer
 
+// 11-03-2023
++ Display testcases
++ Time limit
++ Memmory limit
++ All lang
 
 (Note: Change '+' to '-' once the task is done)
